[package]
name = "stayputnik"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-core = "0.3"
heck = "0.5"
prost = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[build-dependencies]
prost-build = "0.13"

[[bin]]
name = "stayputnik-codegen"
path = "src/bin/codegen.rs"
